Fix z-indexs
- Manuscript placeholder, control bar and ve toolbar
were in the wrong order

--- a/app/assets/stylesheets/screens/papers.css.scss
+++ b/app/assets/stylesheets/screens/papers.css.scss
@@ -87,9 +87,9 @@
   position: absolute;
   top: 56px;
   left: 3px;
-  z-index: 5;
   color: $tahi-grey-dark;
   font-style: italic;
+  z-index: $z-layer-paper-placeholder;
 }
 
 .author-detail {
